<resources>
  <string name="app_name">Weltreise</string>
  <string name="background">background</string>
  <string name="animal">animal</string>
  <string name="button_f">button_f</string>
  <string name="button_l">button_l</string>
  <string name="button_r">button_r</string>
  <string name="button_m">button_m</string>
  <string name="button_n">button_n</string>
  <string name="button_i">button_i</string>
  <string name="button_e">button_e</string>
  <string name="button_a">button_a</string>
  <string name="button_o">button_o</string>
  <string name="button_s">button_s</string>
  <string name="button_b">button_b</string>
  <string name="button_t">button_t</string>
  <string name="dino_f">dino_f</string>
  <string name="dino_l">dino_l</string>
  <string name="dino_r">dino_r</string>
  <string name="dino_m">dino_m</string>
  <string name="dino_n">dino_n</string>
  <string name="dino_i">dino_i</string>
  <string name="dino_e">dino_e</string>
  <string name="dino_a">dino_a</string>
  <string name="dino_o">dino_o</string>
  <string name="dino_s">dino_s</string>
  <string name="dino_b">dino_b</string>
  <string name="dino_t">dino_t</string>
  <string name="button_back">button_back</string>
  <string name="button_left">button_left</string>
  <string name="button_right">button_right</string>
  <string name="button_dinos">button_dinos</string>
  <string name="button_unlock">button_unlock</string>
  <string name="button_museum">button_museum</string>
  <string name="button_tutorial">button_tutorial</string>
  <string name="button_speaker">button_speaker</string>
  <string name="button_letter">button_letter</string>
  <string name="button_letter_progress">button_letter_progress</string>
  <string name="button_letter_progress_cover">button_letter_progress_cover</string>
  <string name="button_exit">button_exit</string>
  <string name="button_reset">button_reset</string>
  <string name="layout_progress">layout_progress</string>
  <string name="flash">flash</string>
  <string name="reset">Spielstand zurücksetzen?</string>
  <string name="tierische">Tierische</string>
  <string name="weltreise">Weltreise</string>
  <string name="arrow_museum">arrow_museum</string>
  <string name="arrow_reset">arrow_reset</string>
  <string name="arrow_tutorial">arrow_tutorial</string>
  <string name="arrow_first_level">arrow_first_level</string>
  <string name="button_skip">button_skip</string>
  <string name="arrow_letter">arrow_letter</string>
  <string name="arrow_speaker">arrow_speaker</string>
  <string name="arrow_back">arrow_back</string>
  <string name="arrow_submarine">arrow_submarine</string>
  <string name="arrow_sign">arrow_sign</string>
  <string name="l4k">l4k</string>

</resources>
