<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@drawable/museum"
  android:orientation="horizontal"

  tools:context="de.tum.in.l4k.weltreise.DinosActivity">

  <ImageButton
    android:id="@+id/button_back"
    android:layout_width="120dp"
    android:layout_height="80dp"
    android:layout_margin="30dp"
    android:background="@null"
    android:contentDescription="@string/button_back"
    android:onClick="onClick"
    android:scaleType="fitStart"
    android:src="@drawable/button_back" />

  <HorizontalScrollView
    android:id="@+id/scroll_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="150dp"
    android:orientation="horizontal"
    android:scrollbars="none">

    <LinearLayout
      android:id="@+id/layout_scroll"
      android:layout_width="wrap_content"
      android:layout_height="match_parent">

      <ImageButton
        android:id="@+id/dino_f"
        android:layout_width="640dp"
        android:layout_height="600dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/dino_f"
        android:onClick="onClick"
        android:scaleType="fitEnd" />

      <ImageButton
        android:id="@+id/dino_l"
        android:layout_width="640dp"
        android:layout_height="600dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/dino_l"
        android:onClick="onClick"
        android:scaleType="fitEnd" />

      <ImageButton
        android:id="@+id/dino_r"
        android:layout_width="640dp"
        android:layout_height="600dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/dino_r"
        android:onClick="onClick"
        android:scaleType="fitEnd" />

      <ImageButton
        android:id="@+id/dino_m"
        android:layout_width="640dp"
        android:layout_height="600dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/dino_m"
        android:onClick="onClick"
        android:scaleType="fitEnd" />

      <ImageButton
        android:id="@+id/dino_n"
        android:layout_width="640dp"
        android:layout_height="600dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/dino_n"
        android:onClick="onClick"
        android:scaleType="fitEnd" />

      <ImageButton
        android:id="@+id/dino_i"
        android:layout_width="640dp"
        android:layout_height="600dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/dino_i"
        android:onClick="onClick"
        android:scaleType="fitEnd" />

      <ImageButton
        android:id="@+id/dino_e"
        android:layout_width="640dp"
        android:layout_height="600dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/dino_e"
        android:onClick="onClick"
        android:scaleType="fitEnd" />

      <ImageButton
        android:id="@+id/dino_a"
        android:layout_width="640dp"
        android:layout_height="600dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/dino_a"
        android:onClick="onClick"
        android:scaleType="fitEnd" />

      <ImageButton
        android:id="@+id/dino_o"
        android:layout_width="640dp"
        android:layout_height="600dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/dino_o"
        android:onClick="onClick"
        android:scaleType="fitEnd" />

      <ImageButton
        android:id="@+id/dino_s"
        android:layout_width="640dp"
        android:layout_height="600dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/dino_s"
        android:onClick="onClick"
        android:scaleType="fitEnd" />

      <ImageButton
        android:id="@+id/dino_b"
        android:layout_width="640dp"
        android:layout_height="600dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/dino_b"
        android:onClick="onClick"
        android:scaleType="fitEnd" />

      <ImageButton
        android:id="@+id/dino_t"
        android:layout_width="640dp"
        android:layout_height="600dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/dino_t"
        android:onClick="onClick"
        android:scaleType="fitEnd" />

    </LinearLayout>

  </HorizontalScrollView>

  <ImageButton
    android:id="@+id/scroll_left"
    android:layout_width="80dp"
    android:layout_height="100dp"
    android:layout_alignParentStart="true"
    android:layout_marginTop="400dp"
    android:alpha="0.4"
    android:background="@null"
    android:contentDescription="@string/button_left"
    android:onClick="onClick"
    android:scaleType="fitCenter"
    android:src="@drawable/scroll_left"
    android:visibility="invisible" />

  <ImageButton
    android:id="@+id/scroll_right"
    android:layout_width="80dp"
    android:layout_height="100dp"
    android:layout_alignParentEnd="true"
    android:layout_marginTop="400dp"
    android:alpha="0.4"
    android:background="@null"
    android:contentDescription="@string/button_right"
    android:onClick="onClick"
    android:scaleType="fitCenter"
    android:src="@drawable/scroll_right"
    android:visibility="invisible" />

</RelativeLayout>
