<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="horizontal"
  android:soundEffectsEnabled="true"
  tools:context="de.tum.in.l4k.weltreise.TutorialActivity">

    <ImageView
      android:id="@+id/tutorial_background"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:contentDescription="@string/background"
      android:scaleType="fitXY"
      android:src="@drawable/background_f" />

    <ImageButton
      android:id="@+id/button_back"
      android:layout_width="120dp"
      android:layout_height="80dp"
      android:layout_margin="30dp"
      android:background="@null"
      android:contentDescription="@string/button_back"
      android:onClick="onClick"
      android:scaleType="fitStart"
      android:src="@drawable/button_back" />

    <ImageButton
      android:id="@+id/button_skip"
      android:layout_width="120dp"
      android:layout_height="80dp"
      android:layout_marginStart="1150dp"
      android:layout_marginTop="30dp"
      android:background="@null"
      android:contentDescription="@string/button_skip"
      android:onClick="onClick"
      android:scaleType="fitStart"
      android:src="@drawable/button_skip" />

    <RelativeLayout
      android:id="@+id/image_progress"
      android:layout_width="120dp"
      android:layout_height="120dp"
      android:layout_gravity="center_horizontal"
      android:layout_marginTop="30dp"
      android:background="@null"
      android:orientation="horizontal"
      android:scaleType="fitCenter" />

    <ImageButton
      android:id="@+id/button_letter"
      android:layout_width="120dp"
      android:layout_height="120dp"
      android:layout_gravity="center_horizontal"
      android:layout_marginTop="30dp"
      android:background="@null"
      android:contentDescription="@string/button_letter"
      android:onClick="onClick"
      android:scaleType="fitCenter"
      android:src="@drawable/f_letter_outline" />

    <ImageButton
      android:id="@+id/button_speaker"
      android:layout_width="120dp"
      android:layout_height="120dp"
      android:layout_gravity="center_horizontal"
      android:layout_marginTop="680dp"
      android:background="@null"
      android:contentDescription="@string/button_speaker"
      android:onClick="onClick"
      android:scaleType="fitCenter"
      android:src="@drawable/button_speaker" />

    <ImageView
      android:id="@+id/button_point_letter"
      android:layout_width="120dp"
      android:layout_height="120dp"
      android:layout_marginStart="480dp"
      android:layout_marginTop="90dp"
      android:contentDescription="@string/arrow_letter"
      android:rotation="135"
      android:src="@drawable/button_arrow"
      android:visibility="invisible" />

    <ImageView
      android:id="@+id/button_point_speaker"
      android:layout_width="120dp"
      android:layout_height="120dp"
      android:layout_marginStart="500dp"
      android:layout_marginTop="600dp"
      android:contentDescription="@string/arrow_speaker"
      android:rotation="-115"
      android:src="@drawable/button_arrow"
      android:visibility="invisible" />

    <ImageView
      android:id="@+id/button_point_back"
      android:layout_width="120dp"
      android:layout_height="120dp"
      android:layout_marginStart="130dp"
      android:layout_marginTop="80dp"
      android:contentDescription="@string/arrow_back"
      android:rotation="30"
      android:src="@drawable/button_arrow"
      android:visibility="invisible" />

    <ImageView
      android:id="@+id/button_point_submarine"
      android:layout_width="120dp"
      android:layout_height="120dp"
      android:layout_marginStart="280dp"
      android:layout_marginTop="350dp"
      android:contentDescription="@string/arrow_submarine"
      android:rotation="-60"
      android:src="@drawable/button_arrow"
      android:visibility="invisible" />

    <ImageView
      android:id="@+id/button_point_sign"
      android:layout_width="120dp"
      android:layout_height="120dp"
      android:layout_marginStart="890dp"
      android:layout_marginTop="360dp"
      android:contentDescription="@string/arrow_sign"
      android:rotation="-160"
      android:src="@drawable/button_arrow"
      android:visibility="invisible" />

    <LinearLayout
      android:id="@+id/left"
      android:layout_width="380dp"
      android:layout_height="fill_parent"
      android:layout_gravity="start"
      android:orientation="vertical" />

    <LinearLayout
      android:id="@+id/middle"
      android:layout_width="520dp"
      android:layout_height="fill_parent"
      android:layout_gravity="center"
      android:orientation="vertical" />

    <LinearLayout
      android:id="@+id/right"
      android:layout_width="380dp"
      android:layout_height="match_parent"
      android:layout_gravity="end"
      android:orientation="vertical" />

    <ImageView
      android:id="@+id/animal"
      android:layout_width="300dp"
      android:layout_height="300dp"
      android:layout_gravity="center_horizontal"
      android:layout_marginTop="370dp"
      android:contentDescription="@string/animal"
      android:scaleType="matrix" />


</FrameLayout>