<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/fl"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="horizontal"
  android:soundEffectsEnabled="true"
  tools:context="de.tum.in.l4k.weltreise.GameActivity">

    <ImageView
      android:id="@+id/level_background"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:adjustViewBounds="true"
      android:contentDescription="@string/background"
      android:scaleType="fitXY" />

    <ImageButton
      android:id="@+id/button_back"
      android:layout_width="120dp"
      android:layout_height="80dp"
      android:layout_margin="30dp"
      android:background="@null"
      android:contentDescription="@string/button_back"
      android:onClick="onClick"
      android:scaleType="fitStart"
      android:src="@drawable/button_back" />

    <RelativeLayout
      android:id="@+id/image_progress"
      android:layout_width="120dp"
      android:layout_height="120dp"
      android:layout_gravity="center_horizontal"
      android:layout_marginTop="30dp"
      android:background="@null"
      android:orientation="horizontal"
      android:scaleType="fitCenter" />

    <ImageButton
      android:id="@+id/button_letter"
      android:layout_width="120dp"
      android:layout_height="120dp"
      android:layout_gravity="center_horizontal"
      android:layout_marginTop="30dp"
      android:background="@null"
      android:contentDescription="@string/button_letter"
      android:onClick="onClick"
      android:scaleType="fitCenter" />

    <ImageButton
      android:id="@+id/button_animal"
      android:layout_width="120dp"
      android:layout_height="120dp"
      android:layout_gravity="center_horizontal"
      android:layout_marginTop="680dp"
      android:background="@null"
      android:contentDescription="@string/button_speaker"
      android:onClick="onClick"
      android:scaleType="fitCenter"
      android:src="@drawable/button_speaker" />

    <LinearLayout
      android:id="@+id/left"
      android:layout_width="380dp"
      android:layout_height="fill_parent"
      android:layout_gravity="start"
      android:orientation="vertical" />

    <LinearLayout
      android:id="@+id/right"
      android:layout_width="380dp"
      android:layout_height="match_parent"
      android:layout_gravity="end"
      android:orientation="vertical" />

    <LinearLayout
      android:id="@+id/middle"
      android:layout_width="520dp"
      android:layout_height="fill_parent"
      android:layout_gravity="center"
      android:orientation="vertical" />

    <LinearLayout
      android:id="@+id/layout_top"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical" />

    <ImageView
      android:id="@+id/animal"
      android:layout_width="300dp"
      android:layout_height="300dp"
      android:layout_gravity="center_horizontal"
      android:layout_marginTop="370dp"
      android:contentDescription="@string/animal"
      android:scaleType="matrix" />

    <ImageView
      android:id="@+id/flash"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@color/white"
      android:contentDescription="@string/flash"
      android:visibility="invisible" />


</FrameLayout>